# nodus

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: generate_alias.py  generate_proto_sdk.py  generate_spounge_sdk.py
src/: data.py
src/nodus/: nodus_aliases.py
src/nodus/core/: __init__.py  client.py  server.py
src/nodus/core/application/: mcp_router.py  node_executor.py
src/nodus/core/domain/controllers/: llm_manager.py
src/nodus/core/domain/executors/: autonomous.py  base_executor.py  direct.py  reasoning.py  webhook.py
src/nodus/core/integrations/: polykey_client.py
src/nodus/core/integrations/llm/: gemini_provider.py
src/nodus/core/interfaces/: client.py  server.py  service.py
src/nodus/core/mcp/: client.py  discovery.py  registry.py  tools.py
src/nodus/core/mock/: __init__.py  data.py  service.py
src/nodus/mock/: auto_mock.py  data.py  reason_mock.py  service.py
src/nodus/protos/: __init__.py  common.py  integrations.py  mcp.py  nodes.py  service.py
src/nodus/sdk/: common.py  nodes.py
src/nodus_service/sdk/: __init__.py  integrations.py  service.py
utils/sdk/: client.py  mcp.py
